<resources>
    <string name="app_name">Credit Card Holder</string>
    <string name="action_settings">Settings</string>

    <string name="date_separation">/</string>
    <!--Form input description values-->
    <string name="credit_card_type_description_field">Credit Card:</string>
    <string name="credit_card_number_description_field">Credit Card Number:</string>
    <string name="credit_card_cvv_description_field">Card Verification Value(CVV):</string>
    <string name="credit_card_date_description_field">Expiration Date:</string>
    <string name="credit_card_submit_button">Submit</string>

    <string name="credit_card_number_hint">Fifteen or sixteen digits</string>
    <string name="credit_card_cvv_hint">Three or four digits</string>
    <string name="credit_card_month_hint">MM</string>
    <string name="credit_card_year_hint">YY</string>


    <string name="credit_card_success_title">Success!</string>
    <string name="credit_card_success_dialog_message">Your data is ready to be stored.</string>
    <string name="credit_card_error_dialog_title">Error</string>
    <string name="credit_card_error_dialog_message">Sorry, but there seems to be problem(s) with your input. Please check the red text for more.</string>
    <!--error help text-->
    <string name="credit_card_unknown_type_error">You must choose a known credit card.</string>
    <string name="credit_card_number_error_invalid_digit_number">Invalid number of digits for this card.</string>
    <string name="credit_card_number_error_luhn_validation">Invalid credit card number.</string>
    <string name="credit_card_cvv_invalid_digit_number">Invalid number of CVV digits for this card</string>
    <string name="credit_card_incomplete_date_error">Please complete the date.</string>
    <string name="credit_card_date_error">Invalid or expired date.</string>
</resources>
