<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCreditCardActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/credit_card_type_field_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/credit_card_type_description_field" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/credit_card_type_spinner"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/card_card_list"
            android:spinnerMode="dropdown"
            android:layout_marginRight="10dp" />

        <ImageView
            android:id="@+id/credit_card_type_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/generic_card" />
    </LinearLayout>

    <TextView
        android:id="@+id/credit_card_type_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/credit_card_number_field_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/credit_card_number_description_field" />

    <EditText
        android:id="@+id/credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxLength="19"
        android:inputType="numberPassword"
        android:hint="@string/credit_card_number_hint" />

    <TextView
        android:id="@+id/credit_card_number_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/credit_card_cvv_field_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/credit_card_cvv_description_field" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/credit_card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:hint="@string/credit_card_cvv_hint"
            android:drawableRight="@drawable/cvv" />
    </LinearLayout>

    <TextView
        android:id="@+id/credit_card_cvv_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/credit_card_date_field_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/credit_card_date_description_field" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/credit_card_date_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:maxLength="2"
            android:inputType="numberPassword"
            android:hint="@string/credit_card_month_hint" />

        <EditText
            android:id="@+id/credit_card_date_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:maxLength="2"
            android:inputType="numberPassword"
            android:hint="@string/credit_card_year_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_submit_button" />
</LinearLayout>
